界面美化基本完善（未修改id）

--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.Android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -18,98 +18,137 @@
         android:padding="10dp">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
             android:weightSum="1">
 
-            <TextView
-                android:id="@+id/item_title"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/item_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="来份烤肉拌饭"
+                        android:textColor="@color/colorTex"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/condition2"
+                        android:layout_width="110dp"
+                        android:layout_height="28dp"
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/rect"
+                        android:gravity="center"
+                        android:text="待配送"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/little_time" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="20min/2017-5-7 19:00"
+                    android:textColor="@color/colorTex"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/imageView13"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginLeft="60dp"
+                    android:background="@drawable/little_money" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:text="5元"
+                    android:textColor="@color/colorTex"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/view4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/colordevider"
+                android:padding="16dp" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:lineSpacingExtra="2dp"
-                android:maxLines="1"
-                android:text="烤肉拌饭"
-                android:textColor="#1F1F1F"
-                android:textSize="18sp" />
+                android:layout_marginTop="3dp"
+                android:orientation="horizontal">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                <ImageView
+                    android:id="@+id/imageView13"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:background="@drawable/little_des" />
 
                 <TextView
-                    android:id="@+id/item_order_address"
+                    android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/item_order_destination"
-                    android:layout_alignBottom="@+id/item_order_destination"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginEnd="31dp"
-                    android:layout_marginRight="31dp"
-                    android:text="逸夫教学楼"
-                    android:textColor="@android:color/black" />
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:text="下沉广场烤肉拌饭"
+                    android:textColor="@color/colorTex"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/imageView15"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginLeft="15dp"
+                    android:background="@drawable/little_toward" />
 
                 <TextView
-                    android:id="@+id/item_order_destination"
+                    android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginTop="15dp"
-                    android:text="下沉广场"
-                    android:textColor="@android:color/black" />
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="15dp"
+                    android:text="16号楼512"
+                    android:textColor="@color/colorTex"
+                    android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/item_order_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/item_order_destination"
-                    android:layout_alignStart="@+id/item_order_destination"
-                    android:layout_below="@+id/item_order_destination"
-                    android:text="12.10"
-                    android:textColor="@android:color/black" />
-
-                <TextView
-                    android:id="@+id/item_order_money"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/item_order_time"
-                    android:layout_alignStart="@+id/item_order_time"
-                    android:layout_below="@+id/item_order_time"
-                    android:text="50"
-                    android:textColor="@android:color/black" />
-
-                <Button
-                    android:id="@+id/item_check"
-                    style="@style/Widget.AppCompat.Button.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@+id/item_order_money"
-                    android:background="@color/midnight_blue"
-                    android:elevation="0dp"
-                    android:onClick="onClick"
-                    android:text="接单" />
-
-            </RelativeLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="2dp"
-            android:layout_marginTop="8dp"
-            android:orientation="vertical">
-
-        </LinearLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
