--- a/app/src/main/res/layout/modify_custom.xml
+++ b/app/src/main/res/layout/modify_custom.xml
@@ -107,18 +107,20 @@
             android:background="#909493" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:weightSum="1">
 
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="#f7f7f9">
+                android:background="#f7f7f9"
+                android:layout_weight="0.10">
 
                 <EditText
                     android:id="@+id/shop"
@@ -154,7 +156,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
 
             <Button
