--- a/app/src/main/res/layout/order_myorder_detail.xml
+++ b/app/src/main/res/layout/order_myorder_detail.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:weightSum="1"
     android:background="#fff">
-    <include layout="@layout/topbar_layout_order"/>
+
+    <include layout="@layout/topbar_layout_order" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -138,6 +139,94 @@
                 android:padding="16dp" />
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/condition1"
+                        android:layout_width="118dp"
+                        android:layout_height="wrap_content"
+                        android:text="物品地点"
+                        android:textColor="@color/colorSub"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/condition2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:text="下沉广场烤肉拌饭"
+                        android:textColor="@color/colorTex"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:layout_width="58dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/chose_map" />
+
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colordevider"
+                    android:padding="16dp" />
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/condition1"
+                        android:layout_width="118dp"
+                        android:layout_height="wrap_content"
+                        android:text="配送地点"
+                        android:textColor="@color/colorSub"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/condition2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:text="16号楼512"
+                        android:textColor="@color/colorTex"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:layout_width="58dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/chose_map" />
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/view3"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colordevider"
+                    android:padding="16dp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
@@ -181,10 +270,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_below="@+id/my_order_info"
-            android:layout_marginTop="@dimen/logo_margin_top"
             android:padding="20dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_below="@+id/my_order_info"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
             <ImageButton
                 android:id="@+id/img_float_btn"
@@ -198,13 +288,14 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="200dp"
+                android:layout_weight="0.08"
                 android:background="@drawable/fab_back_bg"
-                android:src="@drawable/fab_back"
-                android:layout_weight="0.08" />
+                android:src="@drawable/fab_back" />
 
 
         </LinearLayout>
 
 
     </RelativeLayout>
+
 </LinearLayout>
